2004-05-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega8

2004-04-29  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Set AVR_LIBC_USER_MANUAL with version number appended
	only if versioned docs are requested (that's the default).

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	Released avr-libc-1.0.4.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* README: Add note about gcc-3.3.3 not compiling for avr.
	* configure.in (AM_INIT_AUTOMAKE): Set version to 1.0.4.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in (AVR_LIBC_USER_MANUAL): Append version number.
	* doc/api/Makefile.am (latex_src/refman.tex): Filter out setting of
	the footrulewidth length since it was breaking the build on
	debian/testing.

2004-04-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega{64,128}

2004-04-22  Theodore A. Roth  <troth@openavr.org>

	[This fixes bug #8649.]
	* NEWS: Add note about this bug fix.
	* include/avr/sfr_defs.h (bit_is_set): Wrap sfr arg with _SFR_BYTE().
	(bit_is_clear): Ditto.

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/sfr_defs.h: Move _SFR_BYTE() and _SFR_WORD() #defines to
	be before first usage.

2004-04-20  Theodore A. Roth  <troth@openavr.org>
[Contributed by LAL@pro.onet.pl]

	[This closes patch #2651]
	* include/avr/iom169.h: Change SIG_UART0_RECV to SIG_USART_RECV.
	Change SIG_UART0_DATA to SIG_USART_DATA.
	Change SIG_UART0_TRANS to SIG_USART_TRANS.
	Provide defines from old to new names to avoid breaking existing code.

2004-04-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	[This change should fix bug #8391]
	* NEWS: Add note about this bug fix.
	* include/avr/boot.h (__BOOT_LOCK_BITS_MASK): Remove.
	(__boot_lock_bits_set): Use the compliment of lock_bits arg so the user